# Kronos

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Kronos.sln  README.md  Setup.bash  Setup.bat  build&run.bash  build.bash
KApp/: CMakeLists.txt
KApp/src/: KAppTest.cpp
KEditor/: CMakeLists.txt
KEditor/resources/: Kronos.aps  Kronos.rc
KEditor/src/: KronosEditor.cpp
Kronos/: CMakeLists.txt  Kronos.vcxproj  Kronos.vcxproj.filters
Kronos/Shaders/: CMakeLists.txt
Kronos/Shaders/HLSL/: PixelShader.hlsl  Structures.hlsl  VertexShader.hlsl
Kronos/src/: Head.cpp  Head.h  Kronos.h  Kronos.hpp
Kronos/src/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Kronos/src/Kronos/: Application.cpp  Application.h  Application.hpp  Core.h  Core.hpp  EntryPoint.h  EntryPoint.hpp  InputManager.cpp  InputManager.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Renderer.hpp  Window.hpp
Kronos/src/Kronos/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Kronos/src/Kronos/Renderer/: GraphicsContext.cpp  GraphicsContext.hpp  Renderer.hpp  Shader.cpp  Shader.hpp
Kronos/src/Platform/DirectX12/: imgui_impl_dx12.cpp  imgui_impl_win32.cpp
Kronos/src/Platform/Windows/: InputManager.cpp  KeyCodes.cpp  WindowsWindow.cpp  WindowsWindow.hpp  stdafx.hpp
Kronos/src/Platform/Windows/DirectX12/: Dx12Context.cpp  Dx12Context.hpp  Dx12Renderer.cpp  Dx12Renderer.hpp  Dx12Structs.hpp  DxHelper.hpp  DxShader.cpp  DxShader.hpp  imgui_impl_win32.cpp
Kronos/src/Platform/Windows/DirectX12/Imgui/: imgui_impl_dx12.cpp  imgui_impl_win32.cpp
Kronos/src/Platform/Windows/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
Kronos/src/Platform/Windows/resources/: resource.hpp
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters
Sandbox/resources/: Kronos.rc
Sandbox/src/: Sanboxapp.cpp  Sandboxapp.cpp  app.cpp
