include_directories(../Kronos/src ../Kronos/vendor/imgui ../Kronos/vendor/DirectXMath/Inc ../Kronos/src/Platform)

if(PLATFORM STREQUAL "Windows")
	add_executable(KEditor WIN32 src/KronosEditor.cpp resources/KRONOS.ico resources/Kronos.rc)
	set_target_properties(KEditor PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/${PLATFORM}")
else()
	add_executable(KEditor src/KronosEditor.cpp)
	set_target_properties(KEditor PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/${PLATFORM}/${CMAKE_BUILD_TYPE}")
endif()
target_link_libraries(KEditor Kronos)
