include_directories(../Kronos/vendor/spdlog/include ../Kronos/src)

if(PLATFORM STREQUAL "Windows")
	add_executable(Sandbox WIN32 src/Sandboxapp.cpp)
	set_target_properties(Sandbox PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/${PLATFORM}")
else()
	add_executable(Sandbox src/Sandboxapp.cpp)
	set_target_properties(Sandbox PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/${PLATFORM}/${CMAKE_BUILD_TYPE}")
endif()
target_link_libraries(Sandbox Kronos)
