if(PLATFORM STREQUAL "Windows")
	include_directories(../Kronos/vendor/spdlog/include ../Kronos/src ../Kronos/vendor/imgui ../Kronos/vendor/DirectXMath/Inc)
	if(CMAKE_BUILD_TYPE STREQUAL "Debug")
		add_executable(Sandbox src/Sandboxapp.cpp resources/KRONOS.ico resources/Kronos.rc)
	else()
		add_executable(Sandbox WIN32 src/Sandboxapp.cpp resources/KRONOS.ico resources/Kronos.rc)
	endif()
	set_target_properties(Sandbox PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/${PLATFORM}")
else()
	include_directories(../Kronos/vendor/spdlog/include ../Kronos/src ../Kronos/vendor/imgui ../Kronos/vendor/DirectXMath/Inc ../Kronos/src/Platform/Linux)
	add_executable(Sandbox src/Sandboxapp.cpp)
	set_target_properties(Sandbox PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/${PLATFORM}/${CMAKE_BUILD_TYPE}")
endif()
target_link_libraries(Sandbox Kronos)
